# fast-api-memo

./: README.md  create_table.py  db.sqlite3  pyproject.toml  requirements.txt
javascript/: script.js
py/: access_token.py  db.py  endpoints.py  models.py
templates/: admin.html  detail.html  index.html  login.html  signup.html  update_detail.html
